# rust-send

./: AGENTS.md  Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: README.md  aesthetics.md  api.md  architecture.md  backend.md  components.md  diagrams.md  pages.md  protocol.md  release.md  roadmap.md  task-plan.md  testing.md
relay-server/: Cargo.toml
relay-server/src/: main.rs  room.rs  ws.rs
scripts/: install-rust.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: device.rs  file.rs  mod.rs  network.rs  transfer.rs
src-tauri/src/core/: device.rs  file.rs  mod.rs  peer.rs  protocol.rs
src-tauri/src/discovery/: mdns.rs
src-tauri/src/platform/: paths.rs
src-tauri/src/relay/: client.rs
src-tauri/src/storage/: config.rs  history.rs
src-tauri/src/transfer/: chunk.rs  engine.rs  mod.rs  receiver.rs  sender.rs
src/__tests__/: button.test.tsx  card.test.tsx  connection-store.test.ts  device-store.test.ts  pairing.test.ts  settings-store.test.ts  sidebar.test.tsx  transfer-normalize.test.ts  transfer-store.test.ts  update-store.test.ts  utils.test.ts
src/app/: globals.css
src/hooks/: use-auto-connect.ts  use-chat-events.ts  use-device-events.ts  use-local-device-info.ts  use-tauri-event.ts  use-transfer-events.ts  use-web-relay.ts
src/lib/: pairing.ts  transfer-normalize.ts  utils.ts
(+30 files in other folders)
