[package]
name = "rust-send"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_send_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
bytes = "1"
mdns-sd = "0.12"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
whoami = "1"
base64 = "0.22"
bit-set = "0.8"
dirs = "5"
log = "0.4"
tracing = "0.1"
